fix(header): apply truncation to recent spaces dropdown
Apply missing truncation to the recent spaces dropdown. Class extensions were not being recognized.

related to https://github.com/openshiftio/openshift.io/issues/1911

--- a/src/app/layout/header/header.component.less
+++ b/src/app/layout/header/header.component.less
@@ -96,7 +96,9 @@
     overflow: hidden;
     white-space: nowrap;
     &-dropdown {
-      @extend: {.recent-items-toggle-text};
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
       margin-right: 2px;
     }
   }
